tests/fixtures/invalid/string-no-quotes-in-array.stderr
TOML parse error at line 1, column 9
  |
1 | value = ZZZ
  |         ^
Unexpected `end of input`
Unexpected `Z`
Expected `true`, `false`, `inf` or `nan`
